--- a/Módulo II/JS/basic/contador/assets/styles.css
+++ b/Módulo II/JS/basic/contador/assets/styles.css
@@ -9,16 +9,16 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: rgb(177, 225, 255);
+    background-color: rgb(59, 63, 58);
 }
 
 button {
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    border: 2px solid lightcoral;
-    background-color: rgb(241, 214, 214);
-    color: lightcoral;
+    border: 2px solid rgb(12, 14, 124);
+    background-color: rgb(23, 167, 59);
+    color: rgb(14, 79, 133);
     font-size: 16pt;
     font-weight: 600;
     text-align: center;
@@ -33,4 +33,9 @@ button {
     align-items: center;
     margin: 0 20px;
     font-size: 16pt;
+}
+
+#limpa {
+    width: 100px;
+    border-radius: 20%;
 }
